17390
1) Create a directory `myBug` in `neg` in Partest with:

file_1.scala:
```scala
class Const { val x = 1 }
```

file_2.java:
```scala
public class file_2 {
    public static void foo() {
        Const c = new Const();
        c.x = 2;
    }
}
```

Running:
```scala
test/partest --show-log test/files/neg/
```

gives:
```scala
Testing individual files
test/files/neg/myBug/file_2.java:4: error: x has private access in Const
        c.x = 2;
         ^
1 error
testing: [...]/files/neg/myBug                                        [  OK  ]
All of 1 tests were successful (elapsed time: 00:00:02)
```

although there is no `check` file with the produced output.


2) Also, there are no compilation errors being printed out for `run` tests.
